# personalWeb

./: .gitignore  deno.json  myapp.db-shm  myapp.db-wal  package-lock.json  package.json
back-end/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
back-end/src/: index.ts
back-end/src/middleWares/: getContacts.ts  getExperience.ts  getPortfolio.ts
back-end/src/types/: types.ts
front-end/: package-lock.json  package.json
front-end/src/: App.tsx  config.json
front-end/src/components/: AboutMe.tsx  CV.tsx  CustomTabPanel.tsx  Home.tsx  ImgDialog.tsx  LazyImage.tsx  Main.tsx  Portfolio.tsx  headers.tsx  videoBg.tsx
front-end/src/css/: App.css  cv.css  headers.css
front-end/src/types/: types.ts
front-end/src/utils/: getConfig.ts  requestHandler.ts
frontend/: package.json
frontend/src/: App.tsx  config.json  index.tsx
frontend/src/components/: AboutMe.tsx  CV.tsx  CustomTabPanel.tsx  Home.tsx  ImgDialog.tsx  LazyImage.tsx  Main.tsx  Portfolio.tsx  headers.tsx
frontend/src/css/: cv.css  index.css  videoBg.css
frontend/src/types/: types.ts
rust-back-end/: Cargo.toml  initiateDB.sql  myapp.db
rust-back-end/src/: main.rs
rust-back-end/src/api/: cv.rs  experience.rs  gallery.rs  mod.rs
rust-back-end/src/data/: aboutMe.txt  experience.json
rust-back-end/src/database/: connection.rs
rust-back-end/src/utils/: aws_utils.rs
uploadImages/: .gitignore  index.ts  package-lock.json  package.json
upload_images/: Cargo.toml
upload_images/src/: aws_client.rs  aws_utils.rs  cli.rs  compress.rs  main.rs
(+2 files in other folders)
