[package]
name = "rust-back-end"
version = "0.1.0"
edition = "2024"
include = ["src/data/experience.json", "src/**", "Cargo.toml", "README.md"]

[dependencies]
actix-web = "4.12.1"
aws-config = "1.8.12"
aws-sdk-s3 = "1.119.0"
chrono = "0.4.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
